<resources>
    <string name="app_name">CountryApp</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_favorite">Favorite</string>
    <string name="name">Name : %s</string>
    <string name="capital">Capital : %s</string>
    <string name="region">Region : %s</string>
    <string name="subregion">Sub Region : %s</string>
    <string name="callingcode">Calling Code : %s</string>
    <string name="language">Language : %s</string>
    <string name="topLevelDomain">Top Level Domain : %s</string>
    <string name="curCode">Currencies Code : %s</string>
    <string name="curName">Currencies Name : %s</string>
    <string name="curSymbol">Currencies Symbol : %s</string>
    <string name="timeZone">Timezone : %s</string>
    <string name="latitude">Latitude : %s</string>
    <string name="longitude">Longitude : %s</string>
    <string name="population">Population : %s</string>
    <string name="area">Area : %s</string>
    <string name="something_wrong">Oops.. something went wrong</string>
    <string name="see_in_maps">See in Maps</string>
    <string name="search_country">Cari negara</string>
    <string name="mapbox_access_token">"pk.eyJ1IjoiYXJpZmFpemluIiwiYSI6ImNrYTI2c3R1cjAwNXAzbm1zaDYyZW1ra2cifQ.okSWF0zf58rWkhoVuYjShQ"</string>
</resources>