<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/img_detail"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@android:color/black"
                android:contentDescription="@string/flag"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tv_name_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                app:layout_constraintTop_toBottomOf="@+id/img_detail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textColor="@android:color/black"
                android:textSize="19sp"/>

            <TextView
                android:id="@+id/tv_capital_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/capital"
                app:layout_constraintTop_toBottomOf="@+id/tv_name_detail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>

            <TextView
                android:id="@+id/tv_region_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/region"
                app:layout_constraintTop_toBottomOf="@+id/tv_capital_detail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>

            <TextView
                android:id="@+id/tv_subregion_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subregion"
                app:layout_constraintTop_toBottomOf="@+id/tv_region_detail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>


            <TextView
                android:id="@+id/tv_callCode_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/callingcode"
                app:layout_constraintTop_toBottomOf="@+id/tv_subregion_detail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>

            <TextView
                android:id="@+id/tv_language_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/language"
                app:layout_constraintTop_toBottomOf="@+id/tv_callCode_detail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>


            <TextView
                android:id="@+id/tv_domain_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/topLevelDomain"
                app:layout_constraintTop_toBottomOf="@+id/tv_language_detail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>


            <TextView
                android:id="@+id/tv_curCode_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/curCode"
                app:layout_constraintTop_toBottomOf="@+id/tv_domain_detail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>

            <TextView
                android:id="@+id/tv_curName_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/curName"
                app:layout_constraintTop_toBottomOf="@+id/tv_curCode_detail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>

            <TextView
                android:id="@+id/tv_curSymbol_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/curSymbol"
                app:layout_constraintTop_toBottomOf="@+id/tv_curName_detail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>

            <TextView
                android:id="@+id/tv_time_zone_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/timeZone"
                app:layout_constraintTop_toBottomOf="@+id/tv_curSymbol_detail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>

            <TextView
                android:id="@+id/tv_latitude_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/latitude"
                app:layout_constraintTop_toBottomOf="@+id/tv_time_zone_detail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>

            <TextView
                android:id="@+id/tv_longitude_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/longitude"
                app:layout_constraintTop_toBottomOf="@+id/tv_latitude_detail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>

            <TextView
                android:id="@+id/tv_population_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/population"
                app:layout_constraintTop_toBottomOf="@+id/tv_longitude_detail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>


            <TextView
                android:id="@+id/tv_area_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/area"
                app:layout_constraintTop_toBottomOf="@+id/tv_population_detail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="24dp"/>

            <Button
                android:id="@+id/btn_maps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/see_in_maps"
                app:layout_constraintTop_toBottomOf="@+id/tv_area_detail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="24dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_favorite_no"/>

</androidx.constraintlayout.widget.ConstraintLayout>